_sass/_base.scss
$purple: #a24dce;
$red: #c84267;
$orange: #d0804d;
$green: #78bc4e;
$blue: #3489c4;
$theme-primary: #933a55;
$theme-dark: #933a55;
* {
  box-sizing: border-box;
}
html,
body {
    height: 100%;
    width: 100%;
}

body {
    font-size: 13px;
}

hr {
    border-color: $theme-primary;
    border-width: 3px;
    max-width: 50px;
}

hr.light {
    border-color: white;
}

a {
    @include transition-all;
    color: $blue;
    font-weight: bold;
    &:hover,
    &:focus {
        color: darken($blue, 10%);
        text-decoration: underline;
    }
}

h1,
h2,
h3,
h4,
h5,
h6 {
    @include blenda;
    margin:30px 0;
}
h2{ font-size:40px}
@media (max-width: 640px){
		h2 {
			font-size:35px;
		}
}
p {
    font-size: 16px;
    line-height: 1.5;
    margin-bottom: 20px;
}

.bg-primary {
    background-color: $theme-primary;
}

.bg-dark {
    background-color: $theme-dark;
    color: white;
}
.multi-poly {
    padding-top: 150px;
  background: url(/static/images/multi-bg.jpg);
  text-shadow: 1px 1px 3px #565656;
  background-size: cover;
  background-attachment: fixed;
  background-position: center center;
  color: #fff;
  @media only screen
  and (min-device-width : 414px)
  and (max-device-width : 736px) {
    background-attachment: scroll;
  }
}
.red-poly {
  background: url(/static/images/red-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #c84267;
  color: #fff;
  @media only screen
  and (min-device-width : 414px)
  and (max-device-width : 736px) {
    background-attachment: scroll;
  }
}

.green-poly {
  background: url(/static/images/green-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #78bc4e;
  color: #fff;
  @media only screen
  and (min-device-width : 414px)
  and (max-device-width : 736px) {
    background-attachment: scroll;
  }
}

.blue-poly {
  background: url(/static/images/blue-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #3489c4;
  color: #fff;
  @media only screen
  and (min-device-width : 414px)
  and (max-device-width : 736px) {
    background-attachment: scroll;
  }
}

.purple-poly {
  background: url(/static/images/purple-bg.jpg);
  background-size: cover;
  background-attachment: fixed;
  text-shadow: 1px 1px 3px #565656;
  border-bottom: 5px solid #a24dce;
  color: #fff;
  @media only screen
  and (min-device-width : 414px)
  and (max-device-width : 736px) {
    background-attachment: scroll;
  }
}

.text-faded {
    color: rgba(white, .7);
}

aside {
    padding: 50px 0;
}

.no-padding {
    padding: 0;
}

// Navigation
.navbar-fixed-top {
  z-index: 930;
}
.navbar-default {
    background-color: white;
    color: #000;
	overflow: hidden;
	-webkit-transition: height 0.3s;
	-moz-transition: height 0.3s;
	transition: height 0.3s;
	* {
	  -webkit-transition: all 0.3s;
	  -moz-transition: all 0.3s;
	  transition: all 0.3s;
	}
    .navbar-toggle {
	  top:30px;
	  right:10px;
    }
    .navbar-header {
        height: 115px;
        .navbar-brand {
            height: auto;
            img {
                width: 85px;
            }
        }
    }
    @media (max-width: 768px){
      .navbar-collapse.in, .navbar-collapse.collapsing {
	    background:#fff;
	    padding-bottom:10px;
	    width:100%;
	    position: relative;
      }
    }
    .nav {
        margin-top: 40px;
        > li {
            > a,
            > a:focus {
                font-size: 15px;
                color: #000;
                text-transform: uppercase;
                font-weight: bold;
            }
            > a:hover {
                text-decoration: underline;
            }
        }
    }
    #presented {
    	width: 160px;
		float: left;
    	margin: 30px 10px;
    	img {
			width: 100%;
			}
	}
}

.navbar-default.navbar-shrink {
	height:80px;
	.navbar-toggle {
	    top:15px;
	    right:5px;
    }

	.navbar-header {
        height: 75px;
        .navbar-brand {
            height: auto;
            padding:5px;
            img {
                width: 70px;
            }
        }
    }
    .nav {
        margin-top: 20px;
        a, a:focus{
	        font-size:13px;
        }
    }
    #presented {
    width: 145px;
    float: left;
    margin:15px;
    	img {
	    	width:100%
    	}
    }
}


//  Header
header.big {
    text-align: center;
    h1 {
	    font-family: "web_homestead", Impact, Charcoal, sans-serif;
	    font-size: 95px;
	    margin: 50px 0 30px;
    }
    h2 {
	    margin:0 auto 30px;
	    font-size:50px;
	    max-width:860px;
    }
    h3 {
	    margin: 0 0 10px;
	    font-size: 30px;
		font-family: "Courier New",Courier,monospace;
    }
	h4 {
    	font-family: "Courier New",Courier,monospace;
	}
	@media (max-width: 768px){
		h1 {
			font-size:70px;
		}
		h2 {
			font-size:40px;
		}
	}
	@media (max-width: 640px){
		h1 {
			font-size:50px;
		}
		h2 {
			font-size:35px;
		}
		h3 {
			font-size:25px;
		}
	}
	#information-bar {
	  margin-top:10px;
	  margin-bottom:-130px;
	  color:#333;
	  text-shadow: none;
	  font-size:15px;
      width: 75%;
      @media (max-width: 768px){
        width: 90%;
      }
      margin-right: auto;
      margin-left: auto;
      .container {
        width:auto;
        padding: 10px 15px;
        background: #fff;
        position: relative;
        z-index: 999;
        padding: 25px;
        a {
          line-height: 25px;
          margin-bottom:30px;
        }
        .fa {
          font-size:25px;
          margin-right:5px;
	    }
		h4 {
          margin:15px 0;
          font-size:22px;
          @media (min-width:500px) {
          font-size:25px;
		}
	  }
	}
	[class*='col-'] {
      padding:0 30px 10px;
      div {
        margin:-10px auto 0;
        width:280px;
        @media (min-width:500px) {
          width:410px;
        }
        .fa {
          font-size:100px;
          float:left;
          margin-left:30px;
          margin-top:3px;
          color:#666;
          @media (max-width:500px) {
            display: none;
          }
        }
      }
	  ul {
        text-align: left;
        margin: 0;
        padding: 0 0 0 20px;
        li {
          span {
            display: inline-block;
            text-align: left;
            vertical-align: middle;
            b {
              font-size: 20px;
              color: #374045;
              font-weight: bold;
              margin-bottom: 5px;
              display: block;
            }
          }
          span.img-holder {
            text-align: center;
            padding: 0 12px;
            img {
              display: block;
            }
          }
		}
      }
	}
    @media (min-width:992px) {
      [class*='col-']:last-child {
        border-left: 2px solid #F2F2F2;
      }
	}
    .left {
      text-align: left;
    }
    .right {
      padding-top: 50px;
    }
  }
}
.greytext {
  color: #999;
}

// Sections

section {
    padding: 50px 25px 40px;
}
section[class$='-poly'] {
	padding: 50px 25px;
	@media (max-width: 640px) {
		h2 {
			font-size: 30px;
		}
	}
}

section.intro {
	background-color: $blue;
	color: #fff;
	padding-top:140px;
	a {
      color: #fff;
    }
    [class*='col-']:first-child p {
	  font-size:21px;
	}
	[class*='col-']:last-child
	p {
	  font-size:14px;
	  text-align: center

	}
	@media (min-width:768px) {
		p:first-child {
			padding-top:40px;
		}
	}
}
section.attending {
	h2 {
		font-size:35px;
	}
	@media (min-width:993px) and (max-width:1200px) {
		h2 { font-size: 29px;}
	}
	@media (max-width: 640px) {
		h2 {
			font-size: 30px;
		}
	}
}

.section-heading {
    margin-top: 0;
}

section iframe {
	width:100%;
}

.paper {
  text-align: center;
  p {
    text-align: left;
  }
}

//Schedule
.session-card {
  border: 1px solid #d9d9d9;
  padding: 10px;
  min-height: 125px;
  margin-bottom: 10px;
  cursor: pointer;
  width: 99%;
  font-size: 12px;
  $borderleft: 3px solid;
  .title {
    font-weight: bold;
    margin:10px 0;
  }
  .clickmore {
    font-size: 10px;
  }
  .abstract {
    display: none;
  }
  .speaker {
    margin-top: 5px;
    .speakerblock{
      p {
        font-size: 12px;
        margin: 0;
      }
    }
  }

  &.General {
    clear: both;
  }

  &.BackEnd {
    border-left: $borderleft #64AA3D;
  }

  &.Creative {
    border-left: $borderleft #009E98;
  }

  &.DevOps {
    border-left: $borderleft #2E84C9;
  }

  &.FrontEnd {
    border-left: $borderleft #B90F5F;
  }

  &.FullStack {
    border-left: $borderleft #FFDA6B;
  }

  &.IoT {
    border-left: $borderleft #BFB7AD;
  }

  &.ProMan {
    border-left: $borderleft #FA7600;
  }

  &.ProDev {
    border-left: $borderleft #995924;
  }

  &.UX {
    border-left: $borderleft #762275;
  }


  @media (min-width: 992px)  {
    &.BackEnd, &.Creative, &.DevOps, &.FrontEnd, &.FullStack,, &.IoT, &.ProMan, &.ProDev, &.UX {
      width: 24%;
      float: left;
      margin-right: 1%;
    }

    &.open {
      width: 99%;
    }
  }
}

//Speakers
.speakerBundle {
  clear:both;
  display:flex;
  flex-wrap: wrap;
  .speaker {
    margin:30px 0;
    img {
      margin-bottom:15px;
      float:left;
      padding-right:15px;
    }
    h4 {
      font-family: Courier ;
    }
    h4, h3 {
      margin:0;
      margin-bottom:15px;
    }
    p {
      clear:both;
    }
  }
}

//Sponsors
.sponsor {
  border: 1px solid #ccc;
  width: 160px;
  height: 160px;
  text-align: center;
  position: relative;
  float: left;
  margin-left: -1px;
  margin-top: -1px;
  .rank{
    font-size: 9px;
    margin: 0;
    position: absolute;
    top: 5px;
    width: 100%;
  }
  .sponsor-img{
    width: 160px;
    height: 160px;
    margin: 0;
    padding: 20px;
    vertical-align: middle;
    -webkit-transform-style: preserve-3d;
    -moz-transform-style: preserve-3d;
    transform-style: preserve-3d;
    a {
      display:block;
      position:relative;
      top:50%;
      -webkit-transform: translateY(-50%);
      -ms-transform: translateY(-50%);
      transform: translateY(-50%);
    }
  }
}

// Bootstrap Overrides
.text-primary {
    color: $theme-primary;
}

/*.no-gutter >*/[class*='col-'] {
    //padding-right:0;
    //padding-left:0;
    padding-bottom: 10px;
}

// Button Styles
.btn-default {
    @include button-variant($theme-dark, white, white);
}

.btn-primary {
    @include button-variant(white, $theme-primary, $theme-primary);
}

.btn {
    @include sans-serif-font;
    border: none;
    border-radius: 300px;
    font-weight: 700;
    text-transform: uppercase;
}

.btn-xl {
    padding: 15px 30px;
}

// Extras
// -- Highlight Color Customization
::-moz-selection {
    color: white;
    text-shadow: none;
    background: $theme-dark;
}

::selection {
    color: white;
    text-shadow: none;
    background: $theme-dark;
}

img::selection {
    color: white;
    background: transparent;
}

img::-moz-selection {
    color: white;
    background: transparent;
}

body {
    -webkit-tap-highlight-color: $theme-dark;
}

